@@ -26,6 +26,12 @@ $ -> Language fix or change
 ! -> Note
 
 2014-09-13 Christophe Demko <chdemko@gmail.com>
+	* src/fr/kbertet/dgraph/Edge.java
+	* src/fr/kbertet/dgraph/Node.java
+	* test/fr/kbertet/dgraph/NodeTest.java
+		^ Simplify code
+
+2014-09-13 Christophe Demko <chdemko@gmail.com>
 	* All .java files
 		^ Changing copyright
 
